--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,72 +1,88 @@
+<header>
 
-    <header>
+  <!-- Nav Bar -->
+  <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
+    <div class="container">
 
-      <!-- Nav Bar -->
-      <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
-        <div class="container">
-          {% if page.permalink != '/' -%}
-          <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
-            {%- if site.title == "blank" -%}
-              {%- if site.first_name -%}
-                <span class="font-weight-bold">{{- site.first_name -}}&nbsp;</span>
+      {%- comment -%}
+      ============================================================
+      Bilingual support (Scheme B):
+      - curr_lang: current page language (default zh)
+      - nav_pages: only show navbar pages in current language
+      - about_title: title of the home page in current language
+      ============================================================
+      {%- endcomment -%}
+      {% assign curr_lang = page.lang | default: "zh" %}
+      {% assign nav_pages = site.pages | where: "nav", true | where: "autogen", nil | where: "lang", curr_lang | sort: "nav_order" %}
+      {% assign about_title = "Home" %}
+
+      {%- for p in site.pages -%}
+        {%- if p.permalink == '/' and curr_lang == 'zh' -%}
+          {% assign about_title = p.title %}
+        {%- endif -%}
+        {%- if p.permalink == '/en/' and curr_lang == 'en' -%}
+          {% assign about_title = p.title %}
+        {%- endif -%}
+      {%- endfor -%}
+
+      {% if page.permalink != '/' and page.permalink != '/en/' -%}
+      <a class="navbar-brand title font-weight-lighter" href="{% if curr_lang == 'en' %}{{ '/en/' | relative_url }}{% else %}{{ '/' | relative_url }}{% endif %}">
+        {%- if site.title == "blank" -%}
+          {%- if site.first_name -%}
+            <span class="font-weight-bold">{{- site.first_name -}}&nbsp;</span>
+          {%- endif -%}
+          {%- if site.middle_name -%}
+            {{- site.middle_name -}}&nbsp;
+          {%- endif -%}
+          {%- if site.last_name -%}
+            {{- site.last_name -}}
+          {%- endif -%}
+        {%- else -%}
+          {{- site.title -}}
+        {%- endif -%}
+      </a>
+      {%- elsif site.enable_navbar_social -%}
+      <!-- Social Icons -->
+      <div class="navbar-brand social">
+        {% include social.html %}
+      </div>
+      {% endif %}
+
+      <!-- Navbar Toggle -->
+      <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar top-bar"></span>
+        <span class="icon-bar middle-bar"></span>
+        <span class="icon-bar bottom-bar"></span>
+      </button>
+
+      <div class="collapse navbar-collapse text-right" id="navbarNav">
+        <ul class="navbar-nav ml-auto flex-nowrap">
+
+          <!-- Home / About (language-aware) -->
+          <li class="nav-item {% if page.permalink == '/' or page.permalink == '/en/' %}active{% endif %}">
+            <a class="nav-link" href="{% if curr_lang == 'en' %}{{ '/en/' | relative_url }}{% else %}{{ '/' | relative_url }}{% endif %}">{{ about_title }}
+              {%- if page.permalink == '/' or page.permalink == '/en/' -%}
+              <span class="sr-only">(current)</span>
               {%- endif -%}
-              {%- if site.middle_name -%}
-                {{- site.middle_name -}}&nbsp;
+            </a>
+          </li>
+
+          {% if site.blog_nav_title %}
+          <!-- Blog (optional; note: you can later create /en/blog/ if you want) -->
+          <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
+            <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
+              {%- if page.url contains 'blog' -%}
+              <span class="sr-only">(current)</span>
               {%- endif -%}
-              {%- if site.last_name -%}
-                {{- site.last_name -}}
-              {%- endif -%}
-            {%- else -%}
-              {{- site.title -}}
-            {%- endif -%}
-          </a>
-          {%- elsif site.enable_navbar_social -%}
-          <!-- Social Icons -->
-          <div class="navbar-brand social">
-            {% include social.html %}
-          </div>
-          {% endif %}
-          <!-- Navbar Toggle -->
-          <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar top-bar"></span>
-            <span class="icon-bar middle-bar"></span>
-            <span class="icon-bar bottom-bar"></span>
-          </button>
+            </a>
+          </li>
+          {%- endif %}
 
-          <div class="collapse navbar-collapse text-right" id="navbarNav">
-            <ul class="navbar-nav ml-auto flex-nowrap">
-
-              {%- for page in site.pages -%}
-                {% if page.permalink == '/' %}
-                  {% assign about_title = page.title %}
-                {% endif %}
-              {% endfor %}
-
-              <!-- About -->
-              <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }}
-                  {%- if page.permalink == '/' -%}
-                  <span class="sr-only">(current)</span>
-                  {%- endif -%}
-                </a>
-              </li>
-              {% if site.blog_nav_title %}
-              <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
-                  {%- if page.url contains 'blog' -%}
-                  <span class="sr-only">(current)</span>
-                  {%- endif -%}
-                </a>
-              </li>
-              {%- endif %}
-
-              <!-- Other pages -->
-              {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
-              {%- for p in sorted_pages -%}
-              {%- if p.nav and p.autogen == nil -%}
-              {%- if p.dropdown %}
+          <!-- Other pages (ONLY current language) -->
+          {%- for p in nav_pages -%}
+            {%- if p.permalink != '/' and p.permalink != '/en/' -%}
+              {%- if p.dropdown -%}
               <li class="nav-item dropdown {% if page.title == p.title %}active{% endif %}">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ p.title }}
                   {%- if page.title == p.title -%}
@@ -75,15 +91,15 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                   {%- for child in p.children -%}
-                  {%- if child.title == 'divider' %}
-                  <div class="dropdown-divider"></div>
-                  {%- else %}
-                  <a class="dropdown-item" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
-                  {%- endif -%}
-                  {% endfor %}
+                    {%- if child.title == 'divider' -%}
+                    <div class="dropdown-divider"></div>
+                    {%- else -%}
+                    <a class="dropdown-item" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
+                    {%- endif -%}
+                  {%- endfor -%}
                 </div>
               </li>
-              {%- else %}
+              {%- else -%}
               <li class="nav-item {% if page.title == p.title %}active{% endif %}">
                 <a class="nav-link" href="{{ p.url | relative_url }}">{{ p.title }}
                   {%- if page.title == p.title -%}
@@ -92,28 +108,35 @@
                 </a>
               </li>
               {%- endif -%}
-              {%- endif -%}
-              {% endfor -%}
-              {%- if site.enable_darkmode %}
+            {%- endif -%}
+          {%- endfor -%}
 
-              <!-- Toogle theme mode -->
-              <li class="toggle-container">
-                <button id="light-toggle" title="Change theme">
-                  <i class="fas fa-moon"></i>
-                  <i class="fas fa-sun"></i>
-                </button>
-              </li>
-              {%- endif %}
-            </ul>
-          </div>
-        </div>
-      </nav>
-{% if site.enable_progressbar %}
-      <!-- Scrolling Progress Bar -->
-      <progress id="progress" value="0">
-        <div class="progress-container">
-          <span class="progress-bar"></span>
-        </div>
-      </progress>
-{%- endif %}
-    </header>
+          <!-- Language switch -->
+          <li class="nav-item">
+            {% include lang_switch.html %}
+          </li>
+
+          {%- if site.enable_darkmode %}
+          <!-- Toggle theme mode -->
+          <li class="toggle-container">
+            <button id="light-toggle" title="Change theme">
+              <i class="fas fa-moon"></i>
+              <i class="fas fa-sun"></i>
+            </button>
+          </li>
+          {%- endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  {% if site.enable_progressbar %}
+  <!-- Scrolling Progress Bar -->
+  <progress id="progress" value="0">
+    <div class="progress-container">
+      <span class="progress-bar"></span>
+    </div>
+  </progress>
+  {%- endif %}
+
+</header>
